--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -92,6 +92,7 @@
     padding: 0;
     margin: 24px 0 0;
     list-style: none;
+    background-color: white;
   }
   .mobile-menu ul:nth-child(1) {
     border-bottom: 1px solid var(--very-light-pink);
