--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -134,7 +134,7 @@
     height: 40px;
     width: 40px;
   }
-  /* resposive zone ------------------------------------------------------------------------------------------------------------------------------------------------------*/
+  /* resposive zone ---------------------------------------------------.---------------------------------------------------------------------------------------------------*/
   @media (max-width: 640px) {
     .menu{
       display: block;
